# getgitignore

./: LICENSE  README.md  getgitignore.cabal  ggi.cabal
app/: Main.hs
src/: Lib.hs  Main.hs
