name:                getgitignore
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/atmantree/getgitignore#readme
license:             BSD3
license-file:        LICENSE
author:              Carlos Gustavo Ruiz
maintainer:          atmantree@gmail.com
copyright:           2018 Carlos Gustavo Ruiz
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , wreq
                     , lens
  default-language:    Haskell2010

executable getgitignore
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , getgitignore
  default-language:    Haskell2010
