name:                ggi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/atmantree/getgitignore#readme
license:             BSD3
license-file:        LICENSE
author:              Carlos Gustavo Ruiz
maintainer:          atmantree@gmail.com
copyright:           2018 Carlos Gustavo Ruiz
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ggi
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , bytestring
                     , lens
                     , lens-aeson
                     , wreq
                     , http-client
                     , aeson

